--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,8 +1,6 @@
-node_modules
-# Keep environment variables out of version control
-.env
-
-/generated/prisma
-
-prisma/migrations
-dist
+.idea/
+.vscode/
+node_modules/
+build/
+tmp/
+temp/
